List instrument and login

--- a/measuring-instruments-management/src/app/component/sidebar/sidebar.component.html
+++ b/measuring-instruments-management/src/app/component/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="w-300px vh-100 position-fixed start-0 top-50px pt-4 rounded-top overflow-hidden bg-body-tertiary">
+<div class="w-200px vh-100 position-fixed start-0 top-50px pt-4 rounded-top overflow-hidden bg-body-tertiary shadow">
   <div class="list-group list-group-flush">
     <button type="button"
             id="instrument-management-sidebar"
