--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-list/instrument-list.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-list/instrument-list.component.html
@@ -1,33 +1,70 @@
-<table class="table position-relative row table-hover">
-  <caption class="caption-top text-center h2 col-12">Danh sách thiết bị đo lường</caption>
-  <thead class="row col-12">
-  <tr class="text-center row col-12">
-    <th scope="col" class="col-1">#</th>
-    <th scope="col" class="col-3">First</th>
-    <th scope="col" class="col-3">Last</th>
-    <th scope="col" class="col-3">Last</th>
-    <th scope="col" class="col-1">Chi tiết</th>
-    <th scope="col" class="col-1">Xóa</th>
-  </tr>
-  </thead>
-  <tbody class="row col-12">
-  <tr class="row col-12">
-    <th scope="row" class="col-1 text-center">1</th>
-    <td class="col-3">Mark</td>
-    <td class="col-3">Otto</td>
-    <td class="col-3">Otto</td>
-    <td class="col-1 d-flex justify-content-center">
-      <button class="btn btn-info">
+<div class="overflow-x-auto">
+  <table class="table row table-hover" style="width: 1320px;">
+    <caption class="caption-top fs-4 mb-4">Danh sách thiết bị đo lường</caption>
+    <thead class="row col-12">
+    <tr class="text-center row col-12 flex-nowrap">
+      <th scope="col" class="col-1 d-flex justify-content-center">
+        <div class="form-check">
+          <input class="form-check-input"
+                 type="checkbox"
+                 [(ngModel)]="isCheckAll"
+                 (click)="checkAll($event)">
+        </div>
+      </th>
+      <th scope="col" class="col-1">Tên</th>
+      <th scope="col" class="col-1">Phiên âm</th>
+      <th scope="col" class="col-1">Số hiệu</th>
+      <th scope="col" class="col-1">Ký hiệu</th>
+      <th scope="col" class="col-1">Nhóm</th>
+      <th scope="col" class="col-1">Loại</th>
+      <th scope="col" class="col-1">Biên chế</th>
+      <th scope="col" class="col-1">Cấp</th>
+      <th scope="col" class="col-1">Đơn vị</th>
+      <th scope="col" class="col-1 text-info">
         <i class="fa-solid fa-circle-info"></i>
-      </button>
-    </td>
-    <td class="col-1 d-flex justify-content-center">
-      <button class="btn btn-danger">
+      </th>
+      <th scope="col" class="col-1 text-danger">
         <i class="fa-solid fa-trash"></i>
-      </button>
-    </td>
-  </tr>
-  <button type="button" style="top: 16px; right: 36px" class="btn btn-outline-primary position-absolute col-auto  ">Thêm mới thiết
-    bị
+      </th>
+    </tr>
+    </thead>
+    <tbody class="row col-12">
+    <tr class="row col-12" *ngFor="let ins of measuringInstrumentListDtos;">
+      <th scope="row" class="col-1 d-flex justify-content-center">
+        <div class="form-check">
+          <input class="form-check-input"
+                 type="checkbox"
+                 [(ngModel)]="ins.enabled"
+                 (click)="checkAllEnabled()">
+        </div>
+      </th>
+      <td class="col-1">{{ins.instrumentName}}</td>
+      <td class="col-1">{{ins.instrumentPhoneticName}}</td>
+      <td class="col-1">{{ins.instrumentSerialNumber}}</td>
+      <td class="col-1">{{ins.instrumentSymbol}}</td>
+      <td class="col-1">{{ins.instrumentGroup?.instrumentGroupName}}</td>
+      <td class="col-1">{{ins.instrumentType?.instrumentTypeName}}</td>
+      <td class="col-1">{{ins.inServiceDate | date: "dd/MM/yyyy"}}</td>
+      <td class="col-1">{{ins.managementLevel}}</td>
+      <td class="col-1">{{ins.managementUnit}}</td>
+      <td class="col-1 d-flex justify-content-center">
+        <button class="btn btn-info text-white">
+          <i class="fa-solid fa-circle-info"></i>
+        </button>
+      </td>
+      <td class="col-1 d-flex justify-content-center">
+        <button class="btn btn-danger">
+          <i class="fa-solid fa-trash"></i>
+        </button>
+      </td>
+    </tr>
+  </table>
+</div>
+<div class="float-end me-5 mt-3">
+  <button type="button" class="btn btn-outline-danger me-2" [class.disabled]="!isMultipleDelete">
+    Xóa tất cả
   </button>
-</table>
+  <button type="button" class="btn btn-outline-primary">
+    Thêm mới
+  </button>
+</div>
