Search, list and delete

--- a/measuring-instruments-management/src/app/app.component.css
+++ b/measuring-instruments-management/src/app/app.component.css
@@ -2,6 +2,10 @@
   margin-left: 200px;
 }
 
-.mt-50x {
-  margin-top: 50px;
+.mt-56px {
+  margin-top: 56px;
+}
+
+.mb-86px {
+  margin-bottom: 86px;
 }
