--- a/measuring-instruments-management/src/app/component/footer/footer.component.html
+++ b/measuring-instruments-management/src/app/component/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<footer class="shadow-lg position-fixed bottom-0 start-0 vw-100 px-2 z-1" style="height: 56px;">
+  <nav class="navbar bg-body-tertiary">
+    <div class="container-fluid justify-content-end">
+      <span class="navbar-brand fs-6">@Copyright</span>
+    </div>
+  </nav>
+</footer>
