--- a/measuring-instruments-management/src/app/module/feature/login/component/login/login.component.html
+++ b/measuring-instruments-management/src/app/module/feature/login/component/login/login.component.html
@@ -1,5 +1,6 @@
-<div>
-  <form *ngIf="loginForm" [formGroup]="loginForm">
+<div class="container h-100" style="width: 350px; padding-top: 10%;">
+  <h3 class="mb-4">Đăng nhập</h3>
+  <form *ngIf="loginForm" [formGroup]="loginForm" (ngSubmit)="submit()">
     <div class="form-floating mb-3">
       <input type="text"
              id="username"
@@ -9,25 +10,28 @@
              formControlName="username"
              placeholder="tài khoản">
       <label for="username">Tài khoản
-        <small class="text-danger position-absolute bottom-0 start-0"
-               *ngIf="username?.touched && username?.errors?.['required']">
-          Tài khoản không được để trống!</small>
       </label>
+      <div class="invalid-feedback" *ngIf="username?.touched && username?.invalid">
+        <span *ngIf="username?.touched && username?.errors?.['required']">{{constantsService.USERNAME_REQUIRED}}</span>
+        <span *ngIf="username?.touched && username?.errors?.['pattern']">{{constantsService.USERNAME_PATTERN}}</span>
+      </div>
     </div>
     <div class="form-floating mb-3">
       <input type="password"
+             id="password"
              class="form-control"
              [class.is-valid]="password?.touched && password?.valid"
              [class.is-invalid]="password?.touched && password?.invalid"
-             id="password"
+             formControlName="password"
              placeholder="mật khẩu">
       <label for="password">Mật khẩu</label>
-      <small class="text-danger position-absolute"
-             *ngIf="password?.touched && password?.errors?.['required']">
-        Mật khẩu không được để trống!</small>
+      <div class="invalid-feedback" *ngIf="password?.touched && password?.invalid">
+        <span *ngIf="password?.touched && password?.errors?.['required']">{{constantsService.PASSWORD_REQUIRED}}</span>
+        <span *ngIf="password?.touched && password?.errors?.['pattern']">{{constantsService.PASSWORD_PATTERN}}</span>
+      </div>
     </div>
     <div>
-      <input type="submit" class="btn btn-primary" value="Đăng nhập">
+      <input type="submit" class="btn btn-primary float-end" value="Đăng nhập">
     </div>
   </form>
 </div>
