--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-search/instrument-search.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-search/instrument-search.component.html
@@ -56,6 +56,7 @@
       </div>
     </div>
     <div class="row justify-content-end pe-2">
+      <button class="btn btn-light col-auto me-2" type="button" (click)="resetForm()">Làm mới</button>
       <button class="btn btn-secondary col-auto" type="submit">Tìm kiếm</button>
     </div>
   </form>
