--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
@@ -1,1 +1,358 @@
-<p>instrument-detail works!</p>
+<div id="instrument-main-info-container">
+  <p class="mb-4" id="instrument-detail-title-container">
+    <span class="h3 text-uppercase">
+      {{measuringInstrumentDetailDto?.instrumentPhoneticName}}
+    </span>
+    <span class="badge rounded-pill align-top text-capitalize user-select-none" style="font-size: 14px;"
+          [class.bg-success]="measuringInstrumentDetailDto?.instrumentStatusName === 'Đang sử dụng'"
+          [class.bg-danger]="measuringInstrumentDetailDto?.instrumentStatusName === 'Hỏng'"
+          [class.bg-warning]="measuringInstrumentDetailDto?.instrumentStatusName === 'Sửa chữa'"
+          [class.bg-primary]="measuringInstrumentDetailDto?.instrumentStatusName === 'Kiểm định'">
+        {{measuringInstrumentDetailDto?.instrumentStatusName}}</span>
+  </p>
+  <div class="d-flex mb-4" id="instrument-image-info-container">
+    <div id="instrument-image-container"
+         class="col-4 d-flex justify-content-center"
+         style="min-width: 350px">
+      <div class="d-flex flex-column align-items-center">
+        <div #carousel id="carousel-instrument-image"
+             style="width: 350px;"
+             class="carousel slide carousel-fade">
+          <div class="carousel-inner w-100">
+            <ng-container *ngIf="instrumentImageLinks.length === 0">
+              <div class="carousel-item active">
+                <img src="assets/image/Image_not_available.jpg" class="d-block w-100" alt="Ảnh thiết bị">
+              </div>
+            </ng-container>
+            <ng-container *ngIf="instrumentImageLinks.length > 0">
+              <div class="carousel-item active">
+                <img [src]="instrumentImageLinks[0]" class="d-block w-100" alt="Ảnh thiết bị">
+              </div>
+              <ng-container *ngFor="let img of instrumentImageLinks; let first = first">
+                <div class="carousel-item" *ngIf="!first">
+                  <img [src]="img" class="d-block w-100" alt="Ảnh thiết bị">
+                </div>
+              </ng-container>
+            </ng-container>
+          </div>
+          <button class="carousel-control-prev"
+                  type="button"
+                  data-bs-target="#carousel-instrument-image"
+                  data-bs-slide="prev" (click)="carouselSlide()">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next"
+                  type="button"
+                  data-bs-target="#carousel-instrument-image"
+                  data-bs-slide="next" (click)="carouselSlide()">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        <div class="overflow-x-auto mt-3 w-100 d-flex justify-content-center" *ngIf="instrumentImageLinks.length > 0">
+          <ul class="d-flex flex-wrap p-0">
+            <ng-container *ngFor="let img of instrumentImageLinks; let i = index">
+              <li class="list-group-item list-image-item mb-1"
+                  [class.image-active]="instrumentImageActiveSrc.includes(img)">
+                <img [src]="img"
+                     [id]="'img-'+ i"
+                     alt="Ảnh thiết bị"
+                     class="w-100 h-100"
+                     (click)="changeImage($event)">
+              </li>
+            </ng-container>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div id="instrument-info-container"
+         class="col-8 d-flex flex-column overflow-auto pe-3" style="max-width: calc(100% - 350px)">
+      <div class="d-flex">
+        <ul class="list-group col-6 pe-2">
+          <li class="list-group-item">
+            <span>Tên gốc: </span>
+            <span>{{measuringInstrumentDetailDto?.instrumentName}}</span>
+          </li>
+          <li class="list-group-item">
+            <span>Nhóm: </span>
+            <span>{{measuringInstrumentDetailDto?.instrumentGroupName}}</span>
+          </li>
+          <li class="list-group-item">
+            <span>Loại: </span>
+            <span>{{measuringInstrumentDetailDto?.instrumentTypeName}}</span>
+          </li>
+          <li class="list-group-item">
+            <span>Ký hiệu: </span>
+            <span>{{measuringInstrumentDetailDto?.instrumentSymbol}}</span>
+          </li>
+          <li class="list-group-item">
+            <span>Số hiệu: </span>
+            <span>{{measuringInstrumentDetailDto?.instrumentSerialNumber}}</span>
+          </li>
+          <li class="list-group-item">
+            <span>Cấp quản lý: </span>
+            <span>{{measuringInstrumentDetailDto?.managementLevel}}</span>
+          </li>
+          <li class="list-group-item">
+            <span>Đơn vị quản lý: </span>
+            <span>{{measuringInstrumentDetailDto?.managementUnit}}</span>
+          </li>
+        </ul>
+        <ul class="list-group col-6">
+          <li class="list-group-item">
+            <span>Ngày biên chế: </span>
+            <span>{{measuringInstrumentDetailDto?.inServiceDate | date: 'dd/MM/yyyy'}}</span>
+          </li>
+          <li class="list-group-item">
+            <span>Nước sản xuất: </span>
+            <span>{{measuringInstrumentDetailDto?.manufactureCountry}}</span>
+          </li>
+          <li class="list-group-item">
+            <span>Năm sản xuất: </span>
+            <span>{{measuringInstrumentDetailDto?.manufactureYear}}</span>
+          </li>
+          <li class="list-group-item">
+            <span>Đảm bảo vũ khí: </span>
+            <span>{{measuringInstrumentDetailDto?.weaponGuarantee}}</span>
+          </li>
+          <li class="list-group-item">
+            <span>Chu kỳ kiểm định: </span>
+            <span>{{measuringInstrumentDetailDto?.accreditationCycle}}</span>
+          </li>
+          <li class="list-group-item">
+            <span>Mức chất lượng: </span>
+            <span>{{measuringInstrumentDetailDto?.qualityLevel}}</span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div id="instrument-detail-description-container">
+    <p class="mb-3">
+      <span class="px-3 py-2 d-inline-block rounded bg-dark text-white user-select-none">Mô tả</span>
+    </p>
+    <p class="pe-4"
+       style="text-indent: 40px; text-align: justify">{{measuringInstrumentDetailDto?.detailedDescription}}</p>
+  </div>
+</div>
+<div class="pe-4 mt-5" id="divider-information-container">
+  <hr class="border border-dark-subtle border-2 opacity-50">
+  <p class="text-center text-uppercase h2 user-select-none">Thông tin khác</p>
+  <hr class="border border-dark-subtle border-2 opacity-50">
+</div>
+<div class="mt-5 pe-3 position-relative pt-5">
+  <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Đặc điểm kỹ thuật</p>
+  <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px">Thêm mới</button>
+  <div class="border border-1 px-4 pb-2 d-inline-block overflow-auto w-100 position-relative"
+       style="max-height: 500px;">
+    <table
+      class="table table-hover text-center text-break" style="min-width: 1200px;">
+      <caption class="d-none">Đặc điểm kỹ thuật</caption>
+      <div *ngIf="technicalCharacteristics.length === 0"
+           class="mt-2">
+        <p class="fs-4">{{this.constantsService.INFO_NOT_FOUND}}</p>
+      </div>
+      <thead *ngIf="technicalCharacteristics.length > 0">
+      <tr class="text-center row col-12 flex-nowrap">
+        <th scope="col" class="col-3">Bắt buộc</th>
+        <th scope="col" class="col-3">Cơ bản</th>
+        <th scope="col" class="col-1">Đơn vị đo</th>
+        <th scope="col" class="col-1">Khoảng đo</th>
+        <th scope="col" class="col-1">Phương sai</th>
+        <th scope="col" class="col-2">Độ không đảm bảo</th>
+        <th scope="col" class="col-1 text-danger">
+          <i class="fa-solid fa-trash fs-5"></i>
+        </th>
+      </tr>
+      </thead>
+      <tbody *ngIf="technicalCharacteristics.length > 0">
+      <tr class="row col-12" *ngFor="let item of technicalCharacteristics;">
+        <td class="col-3 d-flex align-items-start justify-content-start text-start">{{item.basicCharacteristic}}</td>
+        <td class="col-3 d-flex align-items-start justify-content-start text-start">{{item.requiredCharacteristic}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.measuringUnitName}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.measuringRange}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.measuringError}}</td>
+        <td class="col-2 d-flex align-items-start justify-content-center">{{item.measuringUncertainlyDegree}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center ">
+          <button class="btn btn-danger"
+                  (click)="showDeleteModal(item.id, 'technicalCharacteristic')">
+            <i class="fa-solid fa-trash"></i>
+          </button>
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
+<div class="mt-5 pe-3 position-relative pt-5">
+  <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Phụ kiện đi kèm</p>
+  <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px">Thêm mới</button>
+  <div class="border border-1 px-4 pb-2 d-inline-block overflow-auto w-100"
+       style="max-height: 500px;">
+    <table
+      class="table table-hover text-center text-break" style="min-width: 1200px;">
+      <caption class="d-none">Phụ kiện đi kèm</caption>
+      <div *ngIf="attachedDocuments.length === 0"
+           class="mt-2">
+        <p class="fs-4">{{this.constantsService.INFO_NOT_FOUND}}</p>
+      </div>
+      <thead *ngIf="attachedDocuments.length > 0">
+      <tr class="text-center row col-12 flex-nowrap">
+        <th scope="col" class="col-3">Phiên âm</th>
+        <th scope="col" class="col-3">Tên gốc</th>
+        <th scope="col" class="col-1">Ký hiệu</th>
+        <th scope="col" class="col-1">Số lượng</th>
+        <th scope="col" class="col-3">Ghi chú</th>
+        <th scope="col" class="col-1 text-danger">
+          <i class="fa-solid fa-trash fs-5"></i>
+        </th>
+      </tr>
+      </thead>
+      <tbody *ngIf="attachedDocuments.length > 0">
+      <tr class="row col-12" *ngFor="let item of attachedDocuments;">
+        <td class="col-3 d-flex align-items-start justify-content-center">{{item.documentPhoneticName}}</td>
+        <td class="col-3 d-flex align-items-start justify-content-center">{{item.documentName}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.documentSymbol}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.quantity}}</td>
+        <td class="col-3 d-flex align-items-start justify-content-start text-start">{{item.documentNote}}</td>
+        <td class="col-1 d-flex justify-content-center align-items-start">
+          <button class="btn btn-danger"
+                  (click)="showDeleteModal(item.id, 'attachedDocument')">
+            <i class="fa-solid fa-trash"></i>
+          </button>
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
+<div class="mt-5 pe-3 position-relative pt-5">
+  <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Lịch sử kiểm định</p>
+  <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px">Thêm mới</button>
+  <div class="border border-1 px-4 pb-2 d-inline-block overflow-auto w-100"
+       style="max-height: 500px;">
+    <table
+      class="table table-hover text-center text-break" style="min-width: 1200px;">
+      <caption class="d-none">Lịch sử kiểm định</caption>
+      <div *ngIf="instrumentAccreditations.length === 0"
+           class="mt-2">
+        <p class="fs-4">{{this.constantsService.INFO_NOT_FOUND}}</p>
+      </div>
+      <thead *ngIf="instrumentAccreditations.length > 0">
+      <tr class="text-center row col-12 flex-nowrap">
+        <th scope="col" class="col-1">Ngày kiểm định</th>
+        <th scope="col" class="col-2">Nơi kiểm định</th>
+        <th scope="col" class="col-2">Người kiểm định</th>
+        <th scope="col" class="col-2">Kết quả</th>
+        <th scope="col" class="col-1">Số xác nhận</th>
+        <th scope="col" class="col-1">Ngày hết hiệu lực</th>
+        <th scope="col" class="col-2">Ghi chú</th>
+        <th scope="col" class="col-1 text-danger">
+          <i class="fa-solid fa-trash fs-5"></i>
+        </th>
+      </tr>
+      </thead>
+      <tbody *ngIf="instrumentAccreditations.length > 0">
+      <tr class="row col-12" *ngFor="let item of instrumentAccreditations;">
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.accreditationDate}}</td>
+        <td class="col-2 d-flex align-items-start justify-content-center">{{item.accreditationPlace}}</td>
+        <td class="col-2 d-flex align-items-start justify-content-center">{{item.accreditor}}</td>
+        <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.accreditationResult}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.accreditationConfirmNumber}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.validAccreditationEndDate}}</td>
+        <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.accreditationNote}}</td>
+        <td class="col-1 d-flex justify-content-center align-items-start">
+          <button class="btn btn-danger"
+                  (click)="showDeleteModal(item.id, 'instrumentAccreditation')">
+            <i class="fa-solid fa-trash"></i>
+          </button>
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
+<div class="mt-5 pe-3 position-relative pt-5">
+  <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Lịch sử sửa chữa</p>
+  <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px">Thêm mới</button>
+  <div class="border border-1 px-4 pb-2 d-inline-block overflow-auto w-100"
+       style="max-height: 500px;">
+    <table
+      class="table table-hover text-center text-break" style="min-width: 1200px;">
+      <caption class="d-none">Lịch sử sửa chữa</caption>
+      <div *ngIf="instrumentRepairs.length === 0"
+           class="mt-2">
+        <p class="fs-4">{{this.constantsService.INFO_NOT_FOUND}}</p>
+      </div>
+      <thead *ngIf="instrumentRepairs.length > 0">
+      <tr class="text-center row col-12 flex-nowrap">
+        <th scope="col" class="col-1">Ngày sửa</th>
+        <th scope="col" class="col-2">Nguyên nhân</th>
+        <th scope="col" class="col-2">Tình trạng</th>
+        <th scope="col" class="col-2">Kết quả</th>
+        <th scope="col" class="col-1">Nơi sửa</th>
+        <th scope="col" class="col-1">Người sửa</th>
+        <th scope="col" class="col-2">Ghi chú</th>
+        <th scope="col" class="col-1 text-danger">
+          <i class="fa-solid fa-trash fs-5"></i>
+        </th>
+      </tr>
+      </thead>
+      <tbody *ngIf="instrumentRepairs.length > 0">
+      <tr class="row col-12" *ngFor="let item of instrumentRepairs;">
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.repairDate}}</td>
+        <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.repairReason}}</td>
+        <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.instrumentCondition}}</td>
+        <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.repairResult}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.repairPlace}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.repairer}}</td>
+        <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.repairNote}}</td>
+        <td class="col-1 d-flex justify-content-center align-items-start">
+          <button class="btn btn-danger"
+                  (click)="showDeleteModal(item.id, 'instrumentRepair')">
+            <i class="fa-solid fa-trash"></i>
+          </button>
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
+<div class="mt-5 pe-3 position-relative pt-5">
+  <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Lịch sử sử dụng</p>
+  <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px">Thêm mới</button>
+  <div class="border border-1 px-4 pb-2 d-inline-block position-relative overflow-auto w-100"
+       style="max-height: 500px;">
+    <table
+      class="table table-hover text-center text-break" style="min-width: 1200px;">
+      <caption class="d-none">Lịch sử sử dụng</caption>
+      <div *ngIf="instrumentUsages.length === 0"
+           class="mt-2">
+        <p class="fs-4">{{this.constantsService.INFO_NOT_FOUND}}</p>
+      </div>
+      <thead *ngIf="instrumentUsages.length > 0">
+      <tr class="text-center row col-12 flex-nowrap">
+        <th scope="col" class="col-1">Ngày theo dõi</th>
+        <th scope="col" class="col-4">Tình trạng</th>
+        <th scope="col" class="col-1">Thời gian dùng</th>
+        <th scope="col" class="col-2">Người dùng</th>
+        <th scope="col" class="col-3">Ghi chú</th>
+        <th scope="col" class="col-1 text-danger">
+          <i class="fa-solid fa-trash fs-5"></i>
+        </th>
+      </tr>
+      </thead>
+      <tbody *ngIf="instrumentUsages.length > 0">
+      <tr class="row col-12" *ngFor="let item of instrumentUsages;">
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.monitorDate}}</td>
+        <td class="col-4 d-flex align-items-start justify-content-start text-start">{{item.instrumentStatus}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.workingDuration}}</td>
+        <td class="col-2 d-flex align-items-start justify-content-center">{{item.instrumentUser}}</td>
+        <td class="col-3 d-flex align-items-start justify-content-start text-start">{{item.usageNote}}</td>
+        <td class="col-1 d-flex justify-content-center align-items-start">
+          <button class="btn btn-danger"
+                  (click)="showDeleteModal(item.id, 'instrumentUsage')">
+            <i class="fa-solid fa-trash"></i>
+          </button>
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
