--- a/measuring-instruments-management/src/app/component/sidebar/sidebar.component.html
+++ b/measuring-instruments-management/src/app/component/sidebar/sidebar.component.html
@@ -3,26 +3,31 @@
     <button type="button"
             id="instrument-management-sidebar"
             class="list-group-item list-group-item-action list-group-item-light active" aria-current="true"
-            [class.active]="activeButtonId === 'instrument-management-sidebar'"
+            [class.active]="activeButtonId.includes('instrument-management-sidebar')"
             routerLink="instruments"
             (click)="sidebarClick($event)">Quản lý thiết bị</button>
     <button type="button"
-            id="accreditation-management-sidebar"
-            class="list-group-item list-group-item-action list-group-item-light"
-            [class.active]="activeButtonId === 'accreditation-management-sidebar'"
-            routerLink="accreditations"
-            (click)="sidebarClick($event)">Quản lý kiểm định</button>
-    <button type="button"
-            id="repair-management-sidebar"
-            class="list-group-item list-group-item-action list-group-item-light"
-            [class.active]="activeButtonId === 'repair-management-sidebar'"
-            routerLink="repairs"
-            (click)="sidebarClick($event)">Quản lý sửa chữa</button>
-    <button type="button"
-            id="usage-management-sidebar"
-            class="list-group-item list-group-item-action list-group-item-light"
-            [class.active]="activeButtonId === 'usage-management-sidebar'"
-            routerLink="usages"
-            (click)="sidebarClick($event)">Quản lý sử dụng</button>
+            id="instrument-management-sidebar-create"
+            class="list-group-item list-group-item-action list-group-item-light ps-5 btn-child" aria-current="true"
+            routerLink="/instruments/create"
+            (click)="sidebarClick($event)"><i class="fa-solid fa-plus small"></i> Thêm mới</button>
+<!--    <button type="button"-->
+<!--            id="accreditation-management-sidebar"-->
+<!--            class="list-group-item list-group-item-action list-group-item-light"-->
+<!--            [class.active]="activeButtonId === 'accreditation-management-sidebar'"-->
+<!--            routerLink="accreditations"-->
+<!--            (click)="sidebarClick($event)">Quản lý kiểm định</button>-->
+<!--    <button type="button"-->
+<!--            id="repair-management-sidebar"-->
+<!--            class="list-group-item list-group-item-action list-group-item-light"-->
+<!--            [class.active]="activeButtonId === 'repair-management-sidebar'"-->
+<!--            routerLink="repairs"-->
+<!--            (click)="sidebarClick($event)">Quản lý sửa chữa</button>-->
+<!--    <button type="button"-->
+<!--            id="usage-management-sidebar"-->
+<!--            class="list-group-item list-group-item-action list-group-item-light"-->
+<!--            [class.active]="activeButtonId === 'usage-management-sidebar'"-->
+<!--            routerLink="usages"-->
+<!--            (click)="sidebarClick($event)">Quản lý sử dụng</button>-->
   </div>
 </div>
