--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-search/instrument-search.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-search/instrument-search.component.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-6 mb-2 mw-600px">
         <label for="multipleSearch" class="form-label">Tên/ Số hiệu/ Ký hiệu/ Đơn vị quản lý:</label>
-        <input type="text" class="form-control" id="multipleSearch" formControlName="multipleSearch">
+        <input type="search" class="form-control" id="multipleSearch" formControlName="multipleSearch">
       </div>
       <div class="col-6 mb-2 mw-600px">
         <label for="instrumentGroupId" class="form-label">Nhóm:</label>
